--- a/tasks/ssh.yml
+++ b/tasks/ssh.yml
@@ -24,11 +24,10 @@
     - restart rsyslog
 
 - name: SSH | Ensure ssh server keys generated
-  command:
-    "ssh-keygen -A"
-    args:
-      creates: "{{ item }}"
-    with_items:
-      - "/etc/ssh/ssh_host_rsa_key"
-      - "/etc/ssh/ssh_host_ecdsa_key"
-      - "/etc/ssh/ssh_host_ed25519_key"
+  command: ssh-keygen -A
+  args:
+    creates: "{{ item }}"
+  with_items:
+    - "/etc/ssh/ssh_host_rsa_key"
+    - "/etc/ssh/ssh_host_ecdsa_key"
+    - "/etc/ssh/ssh_host_ed25519_key"
